Bug 121520 - UI spellchecking: Language list shows installed languages several time
Summary: UI spellchecking: Language list shows installed languages several time
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0.1 target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking-Dialog
  Show dependency treegraph
 
Reported: 2018-11-19 14:02 UTC by Lars Jødal
Modified: 2018-12-12 07:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing how languages are repeated (25.22 KB, image/png)
2018-11-19 14:04 UTC, Lars Jødal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lars Jødal 2018-11-19 14:02:19 UTC
Description:
Tested in LO 6.2.0.0.beta1:

Changing language in Writer, I find that the list of languages shows the installed languages several times.


Steps to Reproduce:
1. Open a document in Writer (new or existing)
2. Open dialog for choice of spell-checking language (Tools > Language > For Selection > More...)
3. Click on Language drop-down menu

Actual Results:
For the languages with installed dictionaries, the list contains the same language repeatedly (apparently four times). Languages available as choice but without installed dictionary are only showed once.

Expected Results:
All languages should be shown only once (whether dictionary is availabale or not). 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.beta1 (x64)
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: da-DK (da_DK); UI-Language: en-GB
Calc: threaded

This bug is a regression since current fresh version 6.1.3.2, which as expected shows each possible choice of language-dialect only once.
Comment 1 Lars Jødal 2018-11-19 14:04:26 UTC
Created attachment 146772 [details]
Screenshot showing how languages are repeated

Attached png file is a screenshot showing an example of the bug.
Comment 2 Lars Jødal 2018-11-20 10:56:08 UTC
The bug is also present in 6.2.0.0.alpha1
Comment 3 fatfish 2018-11-29 08:34:53 UTC
Sorry, the bug is not reproduced on my libreoffice.

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 0f25a3c36f27fd51453b9a9115f236b83c143684
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-27_20:06:55
Locale: zh-TW (zh_TW); UI-Language: en-US
Calc: threaded
Comment 4 Durgapriyanka 2018-11-30 15:32:34 UTC
Thank you for reporting the bug. I can not reproduce the bug in

Version: 6.0.6.2
Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 5 Lars Jødal 2018-12-03 14:08:43 UTC
Thanks for the attempts so far. But it seems that so far I am alone in testing the bug in the upcoming LO 6.2.x line?

Comment #4 cannot reproduce in LO 6.0.6.2. I agree: The bug is regression not seen before 6.2, so it is not found in 6.0.x (or in 6.1.x).

Comment #3 cannot reproduce in LO 6.3.0.0.alpha0+. That may be a good sign that the regression is already fixed. However, please note that the bug is only about INSTALLED dictionaries. I have myself tried dowloading the latest master version, which identifies itself as 6.3.0.0.alpha0+ (x64). True, I cannot reproduce the bug in that version, but I notice that none of the dictionaries are shown as installed in that master version. So even if the bug is still present in that version, it should not be expressed until dictionaries are added.

LO 6.2.0.0.beta1 comes with a number of installed dictionaries, allowing testing of the bug. Testing again, I still see it. Can anybody confirm or not confirm the bug in 6.2.0.0.beta1 - or in a later version WITH installed dictionaries?

Best regards,
Lars
Comment 6 Dieter 2018-12-03 14:13:38 UTC
I confirm it with

Version: 6.2.0.0.beta1 (x64)
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: en-US (de_DE); UI-Language: en-GB
Calc: threaded

But not with

Version: 6.1.3.2 (x64)
Build-ID: 86daf60bf00efa86ad547e59e09d6bb77c699acb
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group threaded
Comment 7 Aron Budea 2018-12-09 02:40:44 UTC
Bibisected to the following commit using repo bibisect-win32-6.2. Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3b21fed4b153e3bbf1d47c3073f31a3735538596
author		Caolán McNamara <caolanm@redhat.com>	2018-10-10 12:18:13 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-10-10 16:57:12 +0200

optimize adding a block of entries at one time
Comment 8 Commit Notification 2018-12-10 13:58:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/aaf7e843900b5fb995a7188f527552bd616baf9e%5E%21

Resolves: tdf#121520 duplicate languages in dropdown

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-12-10 14:09:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/f6ad6eedfd21bc8f9de09d53d3be883bbc543cc7%5E%21

Resolves: tdf#121520 duplicate languages in dropdown

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Lars Jødal 2018-12-11 12:00:47 UTC
I can confirm that the problem is solved. Testing with

Version: 6.2.0.0.beta1+ (x64)
Build ID: 030c9f1fcb8fecfd8b80d9f7f73025bab8a1b65b
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:libreoffice-6-2, Time: 2018-12-11_08:04:39
Locale: da-DK (da_DK); UI-Language: en-US
Calc: threaded

(after manually installing a dictionary from the extension site, as the development version appears to come without any installed dictionary).
Comment 11 Dieter 2018-12-11 12:41:22 UTC
(In reply to Lars Jødal from comment #10)
> I can confirm that the problem is solved. Testing with

=> VERIFIED FIXED
Comment 12 Lars Jødal 2018-12-12 07:16:46 UTC
(In reply to Lars Jødal from comment #10)
> I can confirm that the problem is solved. Testing with
> 
> Version: 6.2.0.0.beta1+ (x64)

As the fix was applied separately for 6.2 (comment #8) and 6.3 (comment #9), I have now tested also in 6.3, as expected finding it also solved there.

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-12-12_03:38:09
Locale: da-DK (da_DK); UI-Language: en-US
Calc: threaded