Resolves: tdf#121520 duplicate languages in dropdown

Change-Id: I5bbde305bf06ac1f754f24eb93e89cb3d9cf6058
Reviewed-on: https://gerrit.libreoffice.org/64866
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>